--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <!-- Redirect to the specified URL after 0 seconds -->
-    <meta http-equiv="refresh" content="0; url=https://github.com/cyber-panther">
+    <meta http-equiv="refresh" content="0; url=https://www.linkedin.com/in/agrim-gautam">
 </head>
 <body>
     <h1>Redirecting...</h1>
-    <p>If you are not redirected, <a href="https://github.com/cyber-panther">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://www.linkedin.com/in/agrim-gautam">click here</a>.</p>
 </body>
 </html>
